AddedAngular client-side application.
